[DevTools] Move Input.dispatchTouchEvent implementation to browser

This allows to dispatch result only after event was ACK'ed, and
includes the whole input pipeline for much more fair event
emulation.

Bug: 747647
Change-Id: Ifc931e52bac14f24c1b05df38dbd54f005c0c4ad