content/browser/site_per_process_browsertest.cc
@@ -952,12 +952,13 @@ class InputEventAckWaiter
         desired_ack_type_received_(false) {}
   ~InputEventAckWaiter() override {}
 
-  void OnInputEventAck(const blink::WebInputEvent& event) override {
+  bool OnInputEventAck(const blink::WebInputEvent& event) override {
     if (event.GetType() == ack_type_waiting_for_) {
       desired_ack_type_received_ = true;
       if (message_loop_runner_->loop_running())
         message_loop_runner_->Quit();
     }
+    return false;
   }
 
   void Wait() {
